简单实现webpack-der-server热更新

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>热更新HMR</title>
+    <title>HMR热更新</title>
     <style>
         html, body {
             margin: 0;
@@ -17,8 +17,8 @@
 </head>
 <body>
     <div id="app">
-        <input type="text" value="123">
-        <div id="msg">测试热更新...</div>
+        <input type="text" value="901">
+        <div id="hotHmrContent">测试热更新...</div>
     </div>
 </body>
 </html>
